<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_group_task"
                android:textColor="?iconDual"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:background="?colorPrimary">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/selected_contacts"
                android:textSize="15sp"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:flexWrap="wrap"
                app:showDivider="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/time_for_task"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />

            <TextView
                android:id="@+id/time_pick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:hint="@string/time_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/date_pick"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintTop_toBottomOf="@id/textView_time"
                android:drawableEnd="@drawable/ic_time"/>

            <TextView
                android:id="@+id/date_pick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:hint="@string/date_hint"
                app:layout_constraintStart_toEndOf="@id/time_pick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_time"
                android:drawableEnd="@drawable/ic_calendar"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/note_hint"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_pick" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_1000_characters"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/light"
                android:textColor="?android:textColorSecondary"
                android:maxLength="200"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/task_note"
                android:maxLength="1000"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="#757575"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/attach_a_photo_url"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_note" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/light"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edit_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/image_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:padding="16dp"
                android:textSize="14sp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>